# qoqo_examples

./: .gitignore  404.html  README.md  backends.html  book.toml  conventions.html  devices.html  index.html  installation.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: ci_tests.yml  publish.yml
circuits/: intro.html  noise.html  pragma.html  readout.html  unitary.html
documentation/src/: SUMMARY.md  backends.md  conventions.md  devices.md  installation.md  introduction.md  noise_models.md
documentation/src/circuits/: intro.md  noise.md  pragma.md  readout.md  unitary.md
documentation/src/gate_operations/: intro.md  multi_qubit_gates.md  single_qubit_gates.md  two_qubit_gates.md
documentation/src/high-level/: cheated.md  classical.md  intro.md  pauliz.md  pauliz_cheated.md  program.md
gate_operations/: intro.html  multi_qubit_gates.html  single_qubit_gates.html  two_qubit_gates.html
high-level/: cheated.html  classical.html  intro.html  pauliz.html  pauliz_cheated.html  program.html
qoqo/: 1_Intro_to_qoqo.ipynb  2_Measurement_example.ipynb  3_Teleportation_example.ipynb  4_Half_adder_example.ipynb  5_Deutsch-Josza_example.ipynb  6_Simple_VHA_with_qoqo.ipynb  7_Devices_and_Noise_Models.ipynb  Deutsch-Josza_Example.ipynb  Half_Adder_Example.ipynb  Intro_to_qoqo.ipynb  Measurement_Example.ipynb  Readme.md  Simple_VHA_with_qoqo.ipynb  Teleportation_Example.ipynb  bosonic_simple_example.py  requirements.txt
roqoqo/: README.md
roqoqo/notebooks/: 1_Intro_to_roqoqo.ipynb  2_Measurement_example.ipynb  3_Teleportation_example.ipynb  Intro_to_roqoqo.ipynb  Measurement_Examples.ipynb  Simple_VHA_with_roqoqo.ipynb  Teleportation_Examples.ipynb
roqoqo/standalone/: Cargo.toml  DEPENDENCIES.txt
roqoqo/standalone/1_Intro_to_roqoqo/: Cargo.toml
roqoqo/standalone/1_Intro_to_roqoqo/src/: main.rs
roqoqo/standalone/2_Measurement_example/: Cargo.toml
roqoqo/standalone/2_Measurement_example/src/: main.rs
roqoqo/standalone/3_Teleportation_example/: Cargo.toml
roqoqo/standalone/3_Teleportation_example/src/: main.rs
roqoqo/standalone/4_Half_adder_example/: Cargo.toml
roqoqo/standalone/4_Half_adder_example/src/: main.rs
roqoqo/standalone/5_Deutsch-Josza_example/: Cargo.toml
roqoqo/standalone/6_Deutsch-Josza_example/: Cargo.toml
roqoqo/standalone/6_Deutsch-Josza_example/src/: main.rs
roqoqo/standalone/deutsch-josza_example/: Cargo.toml
roqoqo/standalone/deutsch-josza_example/src/: deutsch_josza_example.rs  main.rs
roqoqo/standalone/half_adder_example/: Cargo.toml
roqoqo/standalone/half_adder_example/src/: half_adder_example.rs  main.rs
roqoqo/standalone/intro_examples/: Cargo.toml
roqoqo/standalone/intro_examples/src/: intro_to_roqoqo.rs  measurement_example.rs  teleportation_example.rs
roqoqo/standalone/src/: intro_to_roqoqo.rs  main.rs  measurement_example.rs  simple_vha_with_roqoqo.rs  teleportation_example.rs
tests/python_tests/: requirements.txt  test_notebooks.py
