[package]
name = "rust_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
roqoqo = {version="0.11"}
roqoqo-quest = {version="0.4"}
num-complex = "0.4"
qoqo_calculator = "0.7"
ndarray = { version = "0.15" }
eigenvalues = "0.4"
nalgebra = "0.30"
optimize = "0.1.0"
serde_json = "1.0"
argmin="0.5"
