[package]
name = "Measurement_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = {version="1.4"}
roqoqo-quest = {version="0.10"}
num-complex = "0.4"
qoqo_calculator = "1.1"
nalgebra = "0.32"
serde_json = "1.0"
