[package]
name = "Half_adder_example"
version = "0.1.0"
edition = "2021"

[dependencies]
roqoqo = {version="1.2.5"}
roqoqo-quest = {version="0.9.0"}
num-complex = "0.4"
qoqo_calculator = "1.1.1"
ndarray = { version = "0.15" }
eigenvalues = "0.4"
nalgebra = "0.32"
optimize = "0.1.0"
serde_json = "1.0"
