[package]
name = "Deutsch-Josza_example"
version = "0.1.0"
edition = "2021"

[dependencies]
roqoqo = {version="1.0.0-alpha.5"}
roqoqo-quest = {version="0.7"}
num-complex = "0.4"
qoqo_calculator = "0.8"
ndarray = { version = "0.15" }
eigenvalues = "0.4"
nalgebra = "0.31"
optimize = "0.1.0"
serde_json = "1.0"
